<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#393939">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#696969">

        <Button
            android:id="@+id/home_screen_movies_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/home_screen_upcoming_btn"
            android:layout_alignBottom="@+id/home_screen_upcoming_btn"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:background="#393939"
            android:text="@string/movies"
            android:textColor="#cfcfcf"
            android:textSize="18sp" />

        <Button
            android:id="@+id/home_screen_upcoming_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/home_screen_tv_btn"
            android:layout_alignBottom="@+id/home_screen_tv_btn"
            android:layout_centerHorizontal="true"
            android:background="#393939"
            android:text="@string/upcoming"
            android:textColor="#cfcfcf"
            android:textSize="18sp" />

        <Button
            android:id="@+id/home_screen_tv_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:background="#393939"
            android:text="@string/tv"
            android:textColor="#cfcfcf"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:layout_marginTop="50dp"
        android:textSize="28sp"
        android:text="@string/main_menu"
        android:textAlignment="center"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:src="@drawable/bomibot44"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="400dp" />


</LinearLayout>