<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#393939">>

    <TextView
        android:id="@+id/first_login_screen_welcome"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"/>

    <TextView
        android:id="@+id/first_login_screen_title"
        android:textColor="#fff"
        android:textAlignment="center"
        android:textSize="32sp"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/first_login_screen_image"
        android:src="@drawable/bomibot11"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/first_login_screen_desc"
        android:textColor="#fff"
        android:padding="8dp"
        android:textAlignment="center"
        android:text="@string/continue_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/first_login_screen_continueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Continue" />

</LinearLayout>